--- a/css/result.css
+++ b/css/result.css
@@ -5,10 +5,9 @@
     font-family: "Poppins", sans-serif;
 
 }
-
 .congrat-text {
 	
-	width: 300px;
+	width: 370px;
 	margin-left: auto;
 	margin-right: auto;
 	border-radius: 20px;
@@ -21,7 +20,7 @@ box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
 	margin-left: auto;
 	margin-right: auto;
 	display: block;
-	width: 300px;
+	width: 250px;
 margin-top: 10px;
 
 
@@ -30,12 +29,12 @@ margin-top: 10px;
 h1 {
 	text-align: center;
 	color:#2742D5;
-
+font-size: 24px;
 }
 
 p {
 	text-align: center;
 	font-weight: bold;
-	font-size: large;
+	font-size: 17px;
 	color:#FFA822;
 }
